2008-04-22 Quentin Mathe <qmathe@club-internet.fr>

	Written some basic serialization tests and ensured COObjectContext doesn't 
	break the existing code. All tests pass but one (NSNumber issue, may be 
	GNUstep-related).
	* COObjectContext.m:
	(+defaultContext): Fixed the incorrect release of the default context that 
	lead to a crash.
	(-recordInvocation:): Tweaked to always push objects on the recorded objects 
	stack and documented. This fix a crash occuring in -endRecord trying to 
	remove an object which isn't present.
	(-snapshotTimeInterval): Corrected to return the ivar value.
	* Headers/NSObject+CoreObject.h: Declared -version in COManagedObject 
	protocol.
	* Headers/COObject.h:
	* COObject.m:
	(-version:): New method with associated property kCOVersionProperty (fix a
	missing selector exception in COObjectContext).
	(+initialize, -init): Updated to declare kCOVersionProperty.
	* TestObject.m: Updated to test kCOVersionProperty.
	* TestSerializer.m: More tests.
	* GNUmakefile: Turned on all tests by default.

2008-04-19  Quentin Mathe <qmathe@club-internet.fr>

	Introduced COOObjectContext to manage pools of managed core objects 
	(COObject and COProxy). First step towards the modularization of COProxy to 
	share all its code with the adaptative model (COObject and related 
	subclasses).
	WARNING: Work in progress code, mostly untested but compiles fine.
	* Headers/COObjectContext.h:
	* COObjectContext.m:
	Added.
	* Headers/COUtility.h: Added various new macros to handle the recording of 
	invocations.
	* Headers/COObject.h: Added _objectContext ivar.
	* COObject.m:
	(-init): Modified to initialize _objectContext ivar.
	(-objectContext):
	(-relatedCoreObjects):
	(-loadRelatedCoreObjects):
	(-storeRelatedCoreObjects):
	New methods (latest three to deal with core object faults).
	(-setValue:forProperty:):
	(-valueForProperty:):
	Modified to use the new recording macros (several other methods will have to 
	be modified).